; ModuleID = '/home/carl/AnghaBench/libgit2/tests/commit/extr_commit.c_assert_commit_body.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/commit/extr_commit.c_assert_commit_body.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @assert_commit_body(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_6__*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = call %struct.TYPE_6__* @git__calloc(i32 1, i32 4)
  store %struct.TYPE_6__* %6, %struct.TYPE_6__** %5, align 8
  %7 = call i32 @cl_assert(%struct.TYPE_6__* %6)
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @git__strdup(i8* %8)
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  %12 = load i8*, i8** %3, align 8
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %14 = call i32 @git_commit_body(%struct.TYPE_6__* %13)
  %15 = call i32 @cl_assert_equal_s(i8* %12, i32 %14)
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %17 = call i32 @git_commit__free(%struct.TYPE_6__* %16)
  ret void
}

declare dso_local i32 @cl_assert(%struct.TYPE_6__*) #1

declare dso_local %struct.TYPE_6__* @git__calloc(i32, i32) #1

declare dso_local i32 @git__strdup(i8*) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #1

declare dso_local i32 @git_commit_body(%struct.TYPE_6__*) #1

declare dso_local i32 @git_commit__free(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
